[FIX] padding & align

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -26,6 +26,7 @@
     right: 0rem;
     border-radius: 0;
     padding: 0.6em;
+    font-size: 0.8rem;
     text-align: center;
   }
 }
